--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ lua51 = ["mlua/lua51"]
 
 [dependencies]
 # Core dependencies
-plux = { git = "https://github.com/BleynChannel/plux-rs.git", branch = "master" }
+plux-rs = "1.0.0-pre.1"
 
 # Lua integration
 mlua = { version = "0.11.3", features = ["vendored", "send", "serialize"] }
@@ -28,6 +28,6 @@ semver = { version = "1.0.26", features = ["serde"] }
 
 # Utilities
 hashbrown = { version = "0.16.0", features = ["serde"] }
-log = "0.4.20"
+log = "0.4.28"
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.16"
